production/microk8s.1.36/observability.ingress.alertmanager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-main-ingress
  namespace: observability
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nginx-ingress-microk8s
  annotations:
    prometheus.io/port: "9113"
    spec.ingressClassName: public
spec:
  ingressClassName: public
  rules:
  - host: alertmanager.prod.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kube-prom-stack-kube-prome-alertmanager
              port:
                number: 9093
